# cuda-sample1

./: .clangd  CMakeLists.txt  cuda-sample1.ipynb  cuda_sample1.ipynb
benchmarks/: CMakeLists.txt
benchmarks/include/: benchmark.cuh  timeit.cuh  timers.cuh
benchmarks/scripts/: vis.py
benchmarks/src/: dotbench.cu  timers.cu
cuda-sample1-lib/: CMakeLists.txt
cuda-sample1-lib/include/: dotprod.cuh  dynblock.cuh  gridconf.cuh  itemt.cuh  scal.cuh  tkinds.cuh  vec.cuh  vecview.cuh
cuda-sample1-lib/src/: dotprod.cu  dynblock.cu
tests/: CMakeLists.txt
tests/include/: fillvec.cuh
tests/src/: tests.cu
